--- a/_sass/minimal-mistakes/_base.scss
+++ b/_sass/minimal-mistakes/_base.scss
@@ -176,13 +176,9 @@ ol li {
   margin-bottom: 0.5em;
 }
 
-/*li ul, */
+li ul,
 li ol {
   margin-top: 0.5em;
-}
-
-ul {
-  list-style-type: none;
 }
 
 /*
