--- a/_sass/minimal-mistakes/_base.scss
+++ b/_sass/minimal-mistakes/_base.scss
@@ -182,8 +182,9 @@ li ol {
 }
 
 ul {
+  line-height: 0;
   list-style-type: none;
-  margin-top: -1.0em;
+  margin-top: 0.0em;
   margin-bottom: 0em;
 }
 
